--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h6
 p
 {
     font-size: 16px;
-    color: #465b52;
+    color: #ab1830;
     margin: 15px 0 20px 0;
 }
 .section-p1
@@ -51,8 +51,12 @@ body{
     align-items: center;
     justify-content: space-between;
     padding: 20px 80px;
-    background: #e3e6f3;
+    background: #c1a094;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 #navbar
 {
@@ -76,7 +80,7 @@ body{
 }
 #navbar li a:hover,
 #navbar li a.active{
-    color: #088178;
+    color: #ab1830;
 }
 #navbar li a.active::after,
 #navbar li a:hover::after
@@ -84,8 +88,99 @@ body{
     content: "";
     width: 30%;
     height: 2px;
-    background: #088178;
+    background: #ab1830;
     position: absolute;
     bottom: -4px;
     left: 20px  ;
 }
+#hero
+{
+    background-image: url("hero4.png");
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+    background-position: top 25% right 0;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+
+}
+#hero h4
+{
+    padding-bottom: 15px;
+}
+#hero h1
+{
+    color: #ab1830;
+}
+#hero button
+{
+    background-image: url("button.png");
+    background-color: transparent;
+    color: #7f0317;
+    border: 0;
+    padding: 35px 65px 100px 60px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
+}
+#feature
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#feature .fe-box
+{
+    width: 170px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 1px solid #bebebe;
+    border-radius: 2px;
+    margin: 15px 0;
+}
+#feature .fe-box:hover
+{
+    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+}
+#feature .fe-box img
+{
+    width: 100%;
+    margin-bottom: 10px;
+}
+#feature .fe-box h6
+{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #7f0317;
+    background-color: #d8a1b4;
+
+}
+#feature .fe-box:nth-child(2) h6
+{
+    background-color: #cf51c9;
+}
+#feature .fe-box:nth-child(3) h6
+{
+    background-color: #72e648;
+}
+#feature .fe-box:nth-child(4) h6
+{
+    background-color: #df3f57;
+}
+#feature .fe-box:nth-child(5) h6
+{
+    background-color: #d6d32e;
+}
+#feature .fe-box:nth-child(6) h6
+{
+    background-color: #4edaed;
+}
+
