--- a/style.css
+++ b/style.css
@@ -42,6 +42,31 @@ p
 {
     margin: 40px 0;
 }
+button.normal
+{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #fff;
+    background-color: #7f0317;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+button.white
+{
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: #fff;
+    background-color: #7f0317;
+    cursor: pointer;
+    border: 1px solid #fff;
+    outline: none;
+    transition: 0.2s;
+}
 body{
     width: 100%;
 }
@@ -136,7 +161,7 @@ body{
 }
 #feature .fe-box
 {
-    width: 170px;
+    width: 150px;
     text-align: center;
     padding: 25px 15px;
     box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
@@ -146,7 +171,7 @@ body{
 }
 #feature .fe-box:hover
 {
-    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+    box-shadow: 10px 10px 64px rgba(70, 62, 221, 0.2);
 }
 #feature .fe-box img
 {
@@ -183,4 +208,309 @@ body{
 {
     background-color: #4edaed;
 }
+#product1
+{
+    text-align: center;
+}
+#product1 .pro-container
+{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+}
+#product1 .pro
+{
+    width: 25%;
+    min-width: 100px;
+    padding: 14px 70px;
+    border: 1px solid #eadfe3;
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(249, 243, 251, 0.952);
+    margin: 15px 5px;
+    transition: 0.2s ease;
+    position: relative;
+    margin-right: 0.01px;
 
+}
+#product1 .pro:hover
+{
+    box-shadow: 20px 20px 30px rgba(221, 62, 99, 0.6);
+}
+#product1 .pro img{
+    width: 100%;
+    border-radius: 20px;
+}
+#product1 .pro .des
+{
+    text-align: start;
+    padding: 10px 0;
+}
+#product1 .pro .des span
+{
+    color: #c4c1bc;
+    font-size: 12px;
+}
+#product1 .pro .des h5
+{
+    padding-top: 7px;
+    color: #010101;
+    font-size: 14px;
+}
+#product1 .pro .des i
+{
+    font-size: 12px;
+    color: rgb(243, 181, 25);
+}
+#product1 .pro .des h4{
+    padding-top: 7px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #7f0317;
+}
+#product1 .pro .cart
+{
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    background-color: #d1b8af;
+    font-weight: 500;
+    color: #ab1830;
+    border: 1px solid #ab1830;
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+}
+#banner
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url("b1.png");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+#banner h4{
+    color: #000;
+    font-size: 16px;
+}
+#banner h2{
+    color: #000;
+    font-size: 30px;
+    padding: 10px 0;
+}
+#banner h2 span
+{
+    color: #7f0317;
+}
+#banner button:hover
+{
+    background: #c1a094;
+    color: #000;
+}
+#sm-banner
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#sm-banner .banner-box
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("b2.png");
+    min-width: 500px;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    padding: 30px;
+
+}
+#sm-banner .banner-box2
+{
+    background-image: url("b3.png");
+
+}
+
+#sm-banner h4{
+    color: #000;
+    font-size: 20px;
+    font-weight: 300;
+}
+#sm-banner h2{
+    color: #000;
+    font-size: 20px;
+    font-weight: 800;
+}
+#sm-banner span{
+    color: #000;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+#sm-banner .banner-box:hover button
+{
+    background: #c1a094;
+    border: 1px solid #7f0317;
+}
+#banner3
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;
+}
+#banner3 .banner-box
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("b4.png");
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+
+}
+#banner3 .banner-box2
+{
+ background-image: url("b5.png");
+}
+#banner3 .banner-box3
+{
+ background-image: url("b6.png");
+}
+#banner3 h2{
+    color: #7f031892;
+    font-weight: 900;
+    font-size: 22px;
+}
+#banner3 h3{
+    color: #fff;
+    font-weight: 800;
+    font-size: 15px;
+}
+#newsletter
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-image: url(b7.png);
+    background-repeat: no-repeat;
+    background-position: 20% 30%;
+    background-color: #c1a094;
+}
+#newsletter h4{
+    font-size: 22px;
+    font-weight: 700;
+    color: #7f0317;
+}
+#newsletter p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #41030d;
+}
+#newsletter p span{
+    color: #000;
+}
+#newsletter .form
+{
+    display: flex;
+    width: 40%;
+}
+#newsletter input{
+    height: 3.125rem;
+    padding: 0 1.25em;
+    font-size: 14px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    outline: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+#newsletter button{
+background-color: #ab1830d0;
+color: #000;
+white-space: nowrap;
+border-top-left-radius: 0;
+border-bottom-left-radius: 0;
+}
+footer
+{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+footer .col
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+footer .logo
+{
+    margin-bottom: 30px;
+}
+footer h4
+{
+    font-size: 14px;
+    padding-bottom: 20px;
+}
+footer p
+{
+    font-size: 13px;
+    margin: 0 0 8px 0;
+}
+footer a
+{
+    font-size: 13px;
+    text-decoration: none;
+    color: #7f0317;
+    margin: 0 0 8px 0;
+    margin-bottom: 10px;
+}
+footer .follow
+{
+    margin-top: 20px;
+
+}
+footer .follow i
+{
+    color: #41030d;
+    padding-right: 4px;
+    cursor: pointer;
+}
+footer .install .row img
+{
+    border: 1px solid #7f0317;
+    border-radius: 6px;
+}
+footer .install img{
+    margin: 10px 0 15px 0 ;
+}
+footer .follow i:hover,
+    footer a:hover
+    {
+        color: #7f0317;
+    }
+    footer .copyright
+    {
+        margin-bottom: 30px;
+        width: 100%;
+        text-align: center;
+
+    }
